# mars-engine

./: Cargo.toml
crates/mars-audio/: Cargo.toml
crates/mars-foundation/: Cargo.toml
crates/mars-foundation/src/: app.rs  error.rs  ids.rs  lib.rs  logging.rs  math.rs  plugin.rs  prelude.rs
crates/mars-foundation/tests/: foundation_smoke_test.rs  integration.rs
crates/mars-voxel/: Cargo.toml
crates/mars-window/: Cargo.toml
crates/mars-window/src/: lib.rs  plugin.rs  types.rs  winit_backend.rs
crates/mars-window/tests/: mock_backend.rs  window_plugin.rs
examples/hello_shapes/: hud.rs  hud.wgsl  main.rs
src/: lib.rs  prelude.rs
