[workspace]
members = [
  "crates/mars-core",
  "crates/mars-window",
  "crates/mars-render",
  "crates/mars-asset",
  "crates/mars-scenes",
  "crates/mars-audio",
  "crates/mars-voxel",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/ORG/mars-engine"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
hashbrown = "0.14"
smallvec = "1.13"
parking_lot = "0.12"

wgpu  = { version = "26", features = ["wgsl"] }
winit = "0.30"
ab_glyph = "0.2"
bytemuck = { version = "1", features = ["derive"] }
notify = "6"
rodio = "0.17"
cpal = "0.15"
rayon = "1.10"
rapier2d = { version = "0.26", default-features = false, features = ["simd-stable"] }

[package]
name = "mars-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mars: Rusty game engine"

[dependencies]
mars-core   = { path = "crates/mars-core" }
mars-window = { path = "crates/mars-window" }
mars-render = { path = "crates/mars-render" }
mars-asset  = { path = "crates/mars-asset" }
mars-scenes = { path = "crates/mars-scenes" }
mars-audio  = { path = "crates/mars-audio", optional = true }
mars-voxel  = { path = "crates/mars-voxel", optional = true }
ab_glyph.workspace = true

[features]
default = []
audio = ["mars-audio"]
voxel = ["mars-voxel"]

[dev-dependencies]
anyhow = "1"
pollster = "0.3"
winit = { workspace = true }
wgpu  = { workspace = true }
