[workspace]
resolver = "2"

members = [
    "crates/mars-foundation",
    "crates/mars-window",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["humesze@proton.me"]
repository = "https://github.com/ORG/mars-engine"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8" #0.11
hashbrown = "0.14"
smallvec = "1.13"
parking_lot = "0.12"
once_cell = "1.19"
wgpu = { version = "26", features = ["wgsl"] }
winit = "0.30"
ab_glyph = "0.2" 
notify = "6" #8
rodio = "0.17" #0.21
cpal = "0.15" #0.16
rayon = "1.10" #1.11
rapier2d = { version = "0.26", default-features = false, features = ["simd-stable"] }
crossbeam = "0.8"