[package]
name = "mars-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mars engine foundation crate: common types, logging, math, errors"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }