[package]
name = "mars-voxel"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true
glam.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
rayon = { workspace = true }